--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tvHello"
+        android:id="@+id/tv_hello"
         android:text="Hello"
         android:textSize="60sp"
         android:layout_width="wrap_content"
